--- a/app/Kconfig
+++ b/app/Kconfig
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Nordic Semiconductor ASA
+# Copyright (c) 2024 Aaron Chan
 # SPDX-License-Identifier: Apache-2.0
 #
 # This file is the application Kconfig entry point. All application Kconfig
