add maxm10s to uart in dts

--- a/boards/outlaw/outlaw.dts
+++ b/boards/outlaw/outlaw.dts
@@ -46,6 +46,7 @@
 	aliases {
 		dbg-uart = &usart1;
 		gps-uart = &usart2;
+		gps = &maxm10s;
 		led0 = &led;
 		watchdog0 = &iwdg;
 		die-temp0 = &die_temp;
@@ -89,8 +90,13 @@
 &usart2 {
 	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
 	pinctrl-names = "default";
-	current-speed = <115200>;
+	current-speed = <9600>;
 	status = "okay";
+
+	maxm10s: ublox-maxm10s {
+        status = "okay";
+        compatible = "gnss-nmea-generic";
+    };
 };
 
 &spi1 {
