--- a/boards/outlaw/board.yml
+++ b/boards/outlaw/board.yml
@@ -1,6 +1,6 @@
 board:
-  name: outaw
+  name: outlaw
   full_name: Outlaw GPS Tracker
   vendor: Wild West Rocketry
   socs:
-    - name: stm32f103x8
+    - name: stm32f103xe
