--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,5 +1,5 @@
 # Copyright (c) 2024 Aaron Chan
 # SPDX-License-Identifier: Apache-2.0
-#
-# This file contains selected Kconfig options for the application.
 
+CONFIG_SMF=y
+CONFIG_LORA=y
