add a state machine

--- a/boards/outlaw/outlaw.dts
+++ b/boards/outlaw/outlaw.dts
@@ -46,6 +46,7 @@
 	aliases {
 		dbg-uart = &usart1;
 		gnss-uart = &usart2;
+		lora = &lora0;
 		gnss = &maxm10s;
 		led0 = &led;
 		watchdog0 = &iwdg;
