faster clock speed

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,3 +3,13 @@
 
 CONFIG_SMF=y
 CONFIG_LORA=y
+CONFIG_SHELL=y
+#CONFIG_LOG=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_GNSS=y
+CONFIG_GNSS_SATELLITES=y
+CONFIG_GNSS_NMEA0183=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_RTC=y
+CONFIG_SIZE_OPTIMIZATIONS=y
+CONFIG_UART_CONSOLE=y
