Fix weird prj.conf issue where radio mod wouldn't print to uart but outlaw would

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -10,3 +10,8 @@ CONFIG_GNSS_SATELLITES=y
 CONFIG_GNSS_NMEA0183=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_ADC=y
+CONFIG_CONSOLE=y
+CONFIG_PRINTK=y
+CONFIG_UART_CONSOLE=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_SERIAL=y
