--- a/boards/deputy/deputy.dts
+++ b/boards/deputy/deputy.dts
@@ -5,13 +5,13 @@
  */
 
 /dts-v1/;
-#include <st/f1/stm32f103X8.dtsi>
-#include <st/f1/stm32f103r(8-b)tx-pinctrl.dtsi>
+#include <st/f0/stm32f030X8.dtsi>
+#include <st/f0/stm32f030c8tx-pinctrl.dtsi>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
 	model = "Deputy Receiver";
-	compatible = "st,stm32f103xe";
+	compatible = "st,stm32f030x8";
 
 	chosen {
 		zephyr,console = &usart1;
@@ -59,46 +59,20 @@
     };
 };
 
-&adc1 {
-    pinctrl-0 = <&adc1_in0_pa0>;
-    pinctrl-names = "default";
-    status = "okay";
-    #address-cells = <1>;
-    #size-cells = <0>;
-
-    channel@0 {
-        reg = <0>;
-        zephyr,gain = "ADC_GAIN_1";
-        zephyr,reference = "ADC_REF_INTERNAL";
-        zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
-        zephyr,resolution = <12>;
-    };
-};
-
-
-&clk_lsi {
-	status = "okay";
-};
-
-&clk_hsi {
-	clock-frequency = <DT_FREQ_M(8)>;
-	status = "okay";
-};
-
 &pll {
-	mul = <2>;
-	clocks = <&clk_hsi>;
+	prediv = <1>;
+	mul = <6>;
+	clocks = <&clk_hse>;
 	status = "okay";
 };
 
 &rcc {
 	clocks = <&pll>;
-	clock-frequency = <DT_FREQ_M(8)>;
+	clock-frequency = <DT_FREQ_M(48)>;
 	ahb-prescaler = <1>;
-	apb1-prescaler = <2>;
-	apb2-prescaler = <1>;
-	adc-prescaler = <2>;
+	apb1-prescaler = <1>;
 };
+
 
 // DEBUG UART
 &usart1 {
@@ -134,7 +108,7 @@
 //};
 
 &spi1 {
-	pinctrl-0 = <&spi1_sck_master_pa5 &spi1_miso_master_pa6 &spi1_mosi_master_pa7>;
+	pinctrl-0 = <&spi1_sck_pa5 &spi1_miso_pa6 &spi1_mosi_pa7>;
 	pinctrl-names = "default";
 	cs-gpios = <&gpiob 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 	status = "okay";
