--- a/boards/deputy/support/openocd.cfg
+++ b/boards/deputy/support/openocd.cfg
@@ -1,6 +1,4 @@
-source [find board/st_nucleo_f103rb.cfg]
-
-reset_config connect_assert_srst
+source [find board/st_nucleo_f0.cfg]
 
 $_TARGETNAME configure -event gdb-attach {
         echo "Debugger attaching: halting execution"
@@ -11,10 +9,4 @@ $_TARGETNAME configure -event gdb-attach {
 $_TARGETNAME configure -event gdb-detach {
         echo "Debugger detaching: resuming execution"
         resume
-}
-
-rename init old_init
-proc init {} {
-        old_init
-        reset halt
 }
