--- a/boards/deputy/deputy.yaml
+++ b/boards/deputy/deputy.yaml
@@ -1,18 +1,23 @@
-identifier: deputy
-name: Deputy Receiver
+identifier: nucleo_f030r8
+name: ST Nucleo F030R8
 type: mcu
 arch: arm
 toolchain:
   - zephyr
   - gnuarmemb
-  - xtools
-ram: 20
-flash: 128
+ram: 8
+flash: 64
 supported:
-  - gpio
+  - arduino_gpio
+  - arduino_i2c
+  - arduino_spi
+  - i2c
   - spi
+  - gpio
+  - watchdog
   - adc
-  - dma
-  - nvs
-  - counter
+testing:
+  ignore_tags:
+    - net
+    - bluetooth
 vendor: st
