--- a/boards/deputy/deputy_defconfig
+++ b/boards/deputy/deputy_defconfig
@@ -1,11 +1,18 @@
 # SPDX-License-Identifier: Apache-2.0
 
-# enable uart driver
+# Kernel Options due to Low Memory (8k)
+CONFIG_MAIN_STACK_SIZE=640
+CONFIG_IDLE_STACK_SIZE=200
+CONFIG_ISR_STACK_SIZE=512
+# Prevent Interrupt Vector Table in RAM
+CONFIG_SRAM_VECTOR_TABLE=n
+
+# Serial Drivers
 CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
 # enable console
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 
-# enable GPIO
+# GPIO Controller
 CONFIG_GPIO=y
-CONFIG_DEFAULT_RECEIVE_MODE=y
