--- a/boards/deputy/deputy.dts
+++ b/boards/deputy/deputy.dts
@@ -60,9 +60,9 @@
 };
 
 &pll {
-	prediv = <1>;
-	mul = <6>;
-	clocks = <&clk_hse>;
+	prediv = <2>;
+	mul = <12>;
+	clocks = <&clk_hsi>;
 	status = "okay";
 };
 
