--- a/boards/deputy/deputy.dts
+++ b/boards/deputy/deputy.dts
@@ -72,27 +72,23 @@
 &spi1 {
 	pinctrl-0 = <&spi1_sck_pa5 &spi1_miso_pa6 &spi1_mosi_pa7>;
 	pinctrl-names = "default";
-	cs-gpios = <&gpioa 4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	cs-gpios = <&gpioa 4 (GPIO_ACTIVE_LOW)>;
 	status = "okay";
 
 	lora0: lora0@0 {
         compatible = "semtech,sx1276";
         reg = <0>;
         reset-gpios = <&gpiob 11 GPIO_ACTIVE_LOW>;
-        dio-gpios = <&gpiob 0 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-                    <&gpiob 9 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-                    <&gpiob 8 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-                    <&gpiob 2 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-                    <&gpiob 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-                    <&gpiob 10 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
+        dio-gpios = <&gpiob 0 (GPIO_ACTIVE_HIGH)>,
+                    <&gpiob 9 (GPIO_ACTIVE_HIGH)>,
+                    <&gpiob 8 (GPIO_ACTIVE_HIGH)>,
+                    <&gpiob 2 (GPIO_ACTIVE_HIGH)>,
+                    <&gpiob 1 (GPIO_ACTIVE_HIGH)>,
+                    <&gpiob 10 (GPIO_ACTIVE_HIGH)>;
         power-amplifier-output = "pa-boost";
-        spi-max-frequency = <125000>;
+        spi-max-frequency = <DT_FREQ_M(10)>;
         status = "okay";
     };
-};
-
-&die_temp {
-	status = "okay";
 };
 
 &flash0 {
