--- a/boards/outlaw/outlaw.dts
+++ b/boards/outlaw/outlaw.dts
@@ -32,8 +32,8 @@
 		compatible = "gpio-keys";
 		pps: pps {
 			label = "GPS PPS";
-			gpios = <&gpiod 0 GPIO_ACTIVE_HIGH>;
-			zephyr,code = <INPUT_KEY_1>;
+			gpios = <&gpiod 0 GPIO_ACTIVE_LOW>;
+			zephyr,code = <INPUT_KEY_0>;
 		};
 	};
 
@@ -50,22 +50,6 @@
 
 	zephyr,user {
         io-channels = <&adc1 0>;
-    };
-};
-
-&adc1 {
-    pinctrl-0 = <&adc1_in0_pa0>;
-    pinctrl-names = "default";
-    status = "okay";
-    #address-cells = <1>;
-    #size-cells = <0>;
-
-    channel@0 {
-        reg = <0>;
-        zephyr,gain = "ADC_GAIN_1";
-        zephyr,reference = "ADC_REF_INTERNAL";
-        zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
-        zephyr,resolution = <12>;
     };
 };
 
