--- a/boards/outlaw/outlaw.dts
+++ b/boards/outlaw/outlaw.dts
@@ -6,7 +6,7 @@
 
 /dts-v1/;
 #include <st/f1/stm32f103X8.dtsi>
-#include <st/f1/stm32f103r(8-b)tx-pinctrl.dtsi>
+#include <st/f1/stm32f103c(8-b)tx-pinctrl.dtsi>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
@@ -32,7 +32,7 @@
 		compatible = "gpio-keys";
 		pps: pps {
 			label = "GPS PPS";
-			gpios = <&gpiod 0 GPIO_ACTIVE_LOW>;
+			gpios = <&gpiod 0 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 			zephyr,code = <INPUT_KEY_0>;
 		};
 	};
@@ -52,7 +52,7 @@
         io-channels = <&adc1 0>;
     };
 };
-
+&clk_hse { status = "disabled"; };
 &clk_lsi {
 	status = "okay";
 };
