--- a/boards/radio_module/radio_module.dts
+++ b/boards/radio_module/radio_module.dts
@@ -58,6 +58,11 @@
             gpios = <&gpioa 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
             label = "CONNECTOR GPIO 3";
         };
+
+        pps: pps {
+            gpios = <&gpiob 8 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
+            label = "PPS";
+        };
     };
 
     aliases {
@@ -65,6 +70,7 @@
         led1 = &red_led_2;
 
         pin-sw = &gpio_0;
+        pps = &pps;
 
         dbguart = &uart4;
         ubxlib-usart2 = &usart2;
@@ -129,7 +135,7 @@
                     <&gpioa 11 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
                     <&gpioa 10 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
         power-amplifier-output = "pa-boost";
-        spi-max-frequency = <125000>;
+        spi-max-frequency = <DT_FREQ_M(10)>;
         status = "okay";
     };
 };
