--- a/boards/deputy/deputy.dts
+++ b/boards/deputy/deputy.dts
@@ -86,7 +86,7 @@
                     <&gpiob 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
                     <&gpiob 10 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
         power-amplifier-output = "pa-boost";
-        spi-max-frequency = <125000>;
+        spi-max-frequency = <DT_FREQ_M(10)>;
         status = "okay";
     };
 };
