--- a/boards/outlaw_gen2/board.yml
+++ b/boards/outlaw_gen2/board.yml
@@ -1,6 +1,6 @@
 board:
-  name: outlaw
-  full_name: Outlaw GPS Tracker
+  name: outlaw_gen2
+  full_name: Outlaw GPS Tracker Gen 2
   vendor: Wild West Rocketry
   socs:
     - name: stm32f103xe
