--- a/boards/outlaw_gen2/outlaw_gen2.dts
+++ b/boards/outlaw_gen2/outlaw_gen2.dts
@@ -10,7 +10,7 @@
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
-	model = "Outlaw GPS Tracker";
+	model = "Outlaw GPS Tracker Gen 2";
 	compatible = "st,stm32f103xe";
 
 	chosen {
