--- a/boards/outlaw_gen3/outlaw_gen3.dts
+++ b/boards/outlaw_gen3/outlaw_gen3.dts
@@ -5,8 +5,8 @@
  */
 
 /dts-v1/;
-#include <st/f1/stm32l151Xb.dtsi>
-#include <st/f1/stm32l151r(c-b)tx-pinctrl.dtsi>
+#include <st/l1/stm32l151Xb.dtsi>
+#include <st/l1/stm32l151c(6-8-b)uxa-pinctrl.dtsi>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
@@ -54,27 +54,7 @@
 		die-temp0 = &die_temp;
 	};
 
-	zephyr,user {
-        io-channels = <&adc1 0>;
-    };
 };
-
-&adc1 {
-    pinctrl-0 = <&adc1_in0_pa0>;
-    pinctrl-names = "default";
-    status = "okay";
-    #address-cells = <1>;
-    #size-cells = <0>;
-
-    channel@0 {
-        reg = <0>;
-        zephyr,gain = "ADC_GAIN_1";
-        zephyr,reference = "ADC_REF_INTERNAL";
-        zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
-        zephyr,resolution = <12>;
-    };
-};
-
 
 &clk_lsi {
 	status = "okay";
@@ -97,7 +77,6 @@
 	ahb-prescaler = <1>;
 	apb1-prescaler = <2>;
 	apb2-prescaler = <1>;
-	adc-prescaler = <2>;
 };
 
 // DEBUG UART
@@ -133,7 +112,7 @@
 //};
 
 &spi1 {
-	pinctrl-0 = <&spi1_sck_master_pa5 &spi1_miso_master_pa6 &spi1_mosi_master_pa7>;
+	pinctrl-0 = <&spi1_sck_pa5 &spi1_miso_pa6 &spi1_mosi_pa7>;
 	pinctrl-names = "default";
 	cs-gpios = <&gpiob 0 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 	status = "okay";
