--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -1,13 +1,19 @@
 # Copyright (c) 2024 Aaron Chan
 # SPDX-License-Identifier: Apache-2.0
 CONFIG_LORA=y
+CONFIG_LOG=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_GNSS=y
 CONFIG_GNSS_SATELLITES=y
 CONFIG_GNSS_NMEA0183=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_ADC=y
+CONFIG_CONSOLE=y
 CONFIG_PRINTK=y
 CONFIG_UART_CONSOLE=y
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_SERIAL=y
+CONFIG_CORE=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_MODE_DEFERRED=n
+
+CONFIG_MAIN_STACK_SIZE=2048
