Print lora error

--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -15,5 +15,6 @@ CONFIG_SERIAL=y
 CONFIG_CORE=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LORA_LOG_LEVEL_DBG=y
 
 CONFIG_MAIN_STACK_SIZE=2048
