Lower spi frequency for gen3

--- a/boards/outlaw_gen3/outlaw_gen3.dts
+++ b/boards/outlaw_gen3/outlaw_gen3.dts
@@ -136,7 +136,8 @@
 					<&gpiob 15 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
 					<&gpiob 9 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
 		power-amplifier-output = "pa-boost";
-		spi-max-frequency = <DT_FREQ_M(10)>;
+		// Note: 10 MHz max, but can't comm properly at that speed unlike Deputy
+		spi-max-frequency = <DT_FREQ_M(1)>;
 		status = "okay";
 	};
 };
