--- a/app/prj.conf
+++ b/app/prj.conf
@@ -15,6 +15,7 @@ CONFIG_UART_CONSOLE=y
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_SERIAL=y
 CONFIG_CORE=y
+CONFIG_COUNTER=y
 
 CONFIG_MAIN_STACK_SIZE=4096
 #CONFIG_LORA_LOG_LEVEL_DBG=y
