--- a/boards/outlaw_gen3/outlaw_gen3.dts
+++ b/boards/outlaw_gen3/outlaw_gen3.dts
@@ -55,7 +55,8 @@
 		dbg-uart = &usart1;
 		gnss-uart = &usart2;
 		lora = &lora0;
-		pin-sw = &dip1;
+		dip0 = &dip1;
+		dip1 = &dip2;
 		gnss = &maxm10s;
 		led0 = &led;
 		watchdog0 = &iwdg;
