--- a/boards/outlaw_gen3/outlaw_gen3_defconfig
+++ b/boards/outlaw_gen3/outlaw_gen3_defconfig
@@ -10,3 +10,9 @@ CONFIG_UART_CONSOLE=y
 CONFIG_GPIO=y
 CONFIG_DEFAULT_RECEIVE_MODE=n
 
+# USB
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_CDC_ACM=y
+CONFIG_USB_CDC_ACM_LIB=y
+CONFIG_MCUBOOT_USB_DFU=y
+CONFIG_USB_DFU_DEVICE_STACK=y
