Move to C++ and fix compile errors

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -16,6 +16,10 @@ CONFIG_LOG_BACKEND_UART=y
 CONFIG_SERIAL=y
 CONFIG_CORE=y
 CONFIG_COUNTER=y
+CONFIG_CPP=y
+CONFIG_REQUIRES_FULL_LIBCPP=y
+CONFIG_STD_CPP23=y
+
 
 CONFIG_MAIN_STACK_SIZE=4096
 #CONFIG_LORA_LOG_LEVEL_DBG=y
