--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -17,5 +17,8 @@ CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_MODE_DEFERRED=n
 #CONFIG_LORA_LOG_LEVEL_DBG=y
 CONFIG_LORA_LOG_LEVEL_ERR=y
+CONFIG_CPP=y
+CONFIG_REQUIRES_FULL_LIBCPP=y
+CONFIG_STD_CPP23=y
 
 CONFIG_MAIN_STACK_SIZE=2048
