--- a/app/prj.conf
+++ b/app/prj.conf
@@ -23,3 +23,10 @@ CONFIG_STD_CPP23=y
 
 CONFIG_MAIN_STACK_SIZE=4096
 #CONFIG_LORA_LOG_LEVEL_DBG=y
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
