--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -22,3 +22,10 @@ CONFIG_REQUIRES_FULL_LIBCPP=y
 CONFIG_STD_CPP23=y
 
 CONFIG_MAIN_STACK_SIZE=2048
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
