--- a/app/prj.conf
+++ b/app/prj.conf
@@ -24,6 +24,8 @@ CONFIG_STD_CPP23=y
 CONFIG_MAIN_STACK_SIZE=4096
 #CONFIG_LORA_LOG_LEVEL_DBG=y
 
+CONFIG_SHELL=y
+
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
