--- a/receiver/CMakeLists.txt
+++ b/receiver/CMakeLists.txt
@@ -4,4 +4,4 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(receiver LANGUAGES C)
 
 target_include_directories(app PRIVATE include)
-target_sources(app PRIVATE src/main.cpp)
+target_sources(app PRIVATE src/main.cpp src/config_shell.cpp)
