Conditionally compile shell commands using kconfig

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -32,3 +32,7 @@ CONFIG_NVS=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+CONFIG_SHELL_FREQUENCY=y
+CONFIG_SHELL_CALLSIGN=n
+CONFIG_SHELL_NODE_ID=y
