--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -2,50 +2,31 @@
 # SPDX-License-Identifier: Apache-2.0
 CONFIG_LORA=y
 CONFIG_LOG=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
-CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
-
-CONFIG_PRINTK=n
-CONFIG_CONSOLE=n
-CONFIG_UART_CONSOLE=n
-CONFIG_CBPRINTF_NANO=y
-
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=1
-CONFIG_LOG_MODE_DEFERRED=y
-CONFIG_LOG_MODE_IMMEDIATE=n
+CONFIG_CONSOLE=y
+CONFIG_PRINTK=y
+CONFIG_UART_CONSOLE=y
 CONFIG_LOG_BACKEND_UART=y
-CONFIG_LOG_BACKEND_RTT=n
-CONFIG_LOG_PRINTK=n
-CONFIG_LOG_BUFFER_SIZE=1024
-
+CONFIG_SERIAL=y
+CONFIG_CORE=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_MODE_DEFERRED=n
+#CONFIG_LORA_LOG_LEVEL_DBG=y
+CONFIG_LORA_LOG_LEVEL_ERR=y
 CONFIG_CPP=y
 CONFIG_REQUIRES_FULL_LIBCPP=y
-CONFIG_STD_CPP17=y
+CONFIG_STD_CPP23=y
+
 CONFIG_MAIN_STACK_SIZE=2048
 
+CONFIG_SHELL=y
 
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
-
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
-
-CONFIG_CORE=y
-CONFIG_SHELL=y
-CONFIG_SHELL_FREQUENCY=y
-CONFIG_SHELL_HELP=n
-CONFIG_SHELL_HISTORY=n
-CONFIG_SHELL_WILDCARD=n
-CONFIG_SHELL_TAB=n
-CONFIG_SHELL_CMDS=n
-
-CONFIG_LOG_DEFAULT_LEVEL=1
-CONFIG_LOG_MODE_DEFERRED=n
-CONFIG_LOG_BACKEND_RTT=n
-CONFIG_LOG_BACKEND_UART=n
-CONFIG_LOG_MODE_IMMEDIATE=y
 
