--- a/app/prj.conf
+++ b/app/prj.conf
@@ -34,5 +34,5 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 CONFIG_SHELL_FREQUENCY=y
-CONFIG_SHELL_CALLSIGN=n
+CONFIG_LICENSED_FREQUENCY=n
 CONFIG_SHELL_NODE_ID=y
