lower txp rq for 433 and make sure default is 435 for deputy

--- a/receiver/prj.conf
+++ b/receiver/prj.conf
@@ -21,7 +21,8 @@ CONFIG_STD_CPP23=y
 
 CONFIG_MAIN_STACK_SIZE=2048
 
-CONFIG_SHELL=y
+# Need more memory :(
+#CONFIG_SHELL=y
 
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
